<resources>
    <string name="app_name">Matule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_cart">Cart</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">User</string>
</resources>