<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_bottom_navigation"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/favourite_bottom_navigation"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart_bottom_navigation"
        android:title="@string/title_cart" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification_bottom_navigation"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user_bottom_navigation"
        android:title="@string/title_user" />

</menu>